# AstemsSync

./: .prompt.md  Astems.ini
.agents/agents/: agent_definitions.md
.agents/rules/: project_rules.md
.agents/skills/: core_skills.md
.agents/specs/: api_interface.md  architecture.md  database_schema.md
.agents/workflows/: update_process.md
astems-server/: build.gradle.kts  settings.gradle.kts
astems-server/src/main/kotlin/com/vinaastems/sync/: AstemsServerApplication.kt
astems-server/src/main/kotlin/com/vinaastems/sync/config/: DataInitializer.kt
astems-server/src/main/kotlin/com/vinaastems/sync/controller/: AuthController.kt
astems-server/src/main/kotlin/com/vinaastems/sync/dto/: LoginRequest.kt
astems-server/src/main/kotlin/com/vinaastems/sync/entity/: Store.kt
astems-server/src/main/kotlin/com/vinaastems/sync/repository/: StoreRepository.kt
astems-server/src/main/kotlin/com/vinaastems/sync/service/: AuthService.kt
astems-server/src/main/resources/: application-local.yml  application-prod.yml  application.yml
astems-ui/: index.html  package-lock.json  package.json
astems-ui/src/: App.svelte  app.css
astems-ui/src-tauri/: Cargo.toml  tauri.conf.json
astems-ui/src-tauri/src/: lib.rs
astems-ui/src/lib/: LoginPage.svelte  UpdatePage.svelte
ff/: index.html  package-lock.json  package.json
ff/src/: App.svelte  app.css
ff/src/lib/: LoginPage.svelte
