[package]
name = "astems-sync"
version = "1.0.0"
description = "AstemsSync - POS 프로그램 업데이트 관리자"
authors = ["vinaastems-source"]
license = "MIT"
repository = "https://github.com/vinaastems-source/AstemsSync"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
